Footer menu alignment fix

--- a/wp-content/themes/mha_s2s/assets/scss/components/_footer.scss
+++ b/wp-content/themes/mha_s2s/assets/scss/components/_footer.scss
@@ -53,6 +53,10 @@
                 padding: 0;
                 list-style-type: none;
 
+                &.footer-only {
+                    float: left;
+                }
+                
                 // Left Column
                 &.left-col {
                     float: left;
